--- a/mics2015.tex
+++ b/mics2015.tex
@@ -426,7 +426,33 @@ Here is an example of the code above after corrections:
 -> {:c 9, :b 8, :a 3}
 \end{verbatim}
 
-\emcomment{You might want to talk about the message transformations first, and then user scenarios used to test how well it works}
+%\emcomment{You might want to talk about the message transformations first, and then user scenarios used to test how well it works}
+
+\subsection{Error message transformations}\label{sec:transform}
+
+Since standard Clojure error messages are generally unhelpful, we aim to replace many Clojure error messages with improved ones.
+%\emcomment{via a {\tt try/catch} statement}
+%\emcomment{substitute them with?} our replacement messages.
+Our system does this by reading in a user's code and wrapping it in a try/catch block.
+Then any errors thrown by the user's code will be caught and replaced with our custom messages.
+We have a large collection of regular expressions that are checked against any Clojure error messages.
+If a regular expression matches, important details from the original error message are captured and passed on to our replacement messages.
+However, this try/catch approach does not work well in all situations.
+Additional technical challenges arise when dealing with compiler exceptions, the REPL, and lazy sequences.
+Section~\ref{sec:technical} discusses the implementation details and difficulties in more detail.
+%\emcomment{Need to mention that in a simple case this approach means surrounding student code with  a {\tt try/catch}. However, this simple approach is not sufficient for Clojure. Section~\ref{sec:technical} discusses the implementation details and challenges.}
+
+function substitutions only catch runtime
+
+try catch allow us to evaluate both
+
+\emcomment{I would start by describing the try/catch/replace approach, and only then talk about replacements. Replacements are there to determine specific arguments (5, "hello", etc) and report those to the user.}
+One way to accomplish this is to define functions with the same name as standard Clojure functions.
+Within these definitions, we can do type checking on arguments passed in.
+If the type checks find an error, our system displays a customized error message.
+If no type errors are found, the arguments are passed on to the actual corresponding Clojure function.
+
+\alcomment{add a paragraph explaining that this does not handle every possible case. For example, complexities arise when students define their own functions, especially if they are anonymous functions. However, we hope that our system will be helpful in the majority of cases that it does handle.}
 
 \subsection{User scenarios}\label{sec:scenarios}
 
@@ -451,22 +477,6 @@ user/eval769 (NO_SOURCE_FILE:1)
 \pscomment{What we learned from them scenarios}
 
 \pscomment{Work in progress...}
-
-\subsection{Error message transformations}\label{sec:transform}
-
-Since standard Clojure error messages are generally unhelpful, we aim to replace many Clojure error messages with improved ones.
-\emcomment{I would start by describing the try/catch/replace approach, and only then talk about replacements. Replacements are there to determine specific arguments (5, "hello", etc) and report those to the user.}
-One way to accomplish this is to define functions with the same name as standard Clojure functions.
-Within these definitions, we can do type checking on arguments passed in.
-If the type checks find an error, our system displays a customized error message.
-If no type errors are found, the arguments are passed on to the actual corresponding Clojure function.
-
-Another way to replace Clojure error messages is to capture the thrown errors \emcomment{via a {\tt try/catch} statement} and rethrow \emcomment{substitute them with?} our replacement messages.
-\emcomment{Need to mention that in a simple case this approach means surrounding student code with  a {\tt try/catch}. However, this simple approach is not sufficient for Clojure. Section~\ref{sec:technical} discusses the implementation details and challenges.}
-We have a large collection of regular expressions that are checked against any Clojure error messages.
-If a regular expression matches, important details from the original error message are captured and passed on to our replacement messages.
-
-
 
 \subsection{Hints}\label{sec:hints}
 
